fixed right triangle

--- a/app/src/main/assets/indexx.html
+++ b/app/src/main/assets/indexx.html
@@ -11,7 +11,7 @@
 
   <title>Right Tri Calc</title>
 </head>
-<body>
+<body class="bg-black">
 <div class=" container-fluid">
 
   <div class="row">
